--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <ul>
       <li>Phone:  (209) 701-6034</li>
       <li>Email:  kevinthompson651@gmail.com</li>
-      <li>Github:  <a href="https://github.com/kthom93">My Github</a></li>
+      <li>Github:  <a href="https://github.com/kthom93">My Github!!</a></li>
     </ul>
 
     <hr>
