--- a/contact.html
+++ b/contact.html
@@ -14,17 +14,15 @@
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
-    <section>
-      <aside>
-	<img src="/images/profile_picture.jpg" alt="Kevin Thompson" style="width:256px;height:256px;">
-      </aside>
 
-      <article>
-        <h1>About Me!</h1>
-        <p>Hi, my name is Kevin Thompson and I am taking CS 260 this semester</p>
-      
-      </article>
-      <hr>
-    </section>
+    <h2>Contact Information</h2>
+    <ul>
+      <li>Phone:  (209) 701-6034</li>
+      <li>Email:  kevinthompson651@gmail.com</li>
+      <li>Github:  <a href="https://github.com/kthom93">My Github!!</a></li>
+    </ul>
+
+    <hr>
+    
   </body>
 </html>
